<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ProfileBlockBitmap1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"

                app:layout_constraintBottom_toTopOf="@+id/ProfileBlockBitmap4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3333"
                app:srcCompat="?android:attr/listChoiceIndicatorMultiple" />

            <ImageView
                android:id="@+id/ProfileBlockBitmap2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"

                app:layout_constraintBottom_toTopOf="@+id/ProfileBlockBitmap5"
                app:layout_constraintStart_toEndOf="@+id/ProfileBlockBitmap1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3333"
                app:srcCompat="?android:attr/listChoiceIndicatorMultiple" />

            <ImageView
                android:id="@+id/ProfileBlockBitmap3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"

                app:layout_constraintBottom_toTopOf="@+id/ProfileBlockBitmap6"
                app:layout_constraintStart_toEndOf="@+id/ProfileBlockBitmap2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3333"
                app:srcCompat="?android:attr/listChoiceIndicatorMultiple" />

            <ImageView
                android:id="@+id/ProfileBlockBitmap4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"

                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/ProfileBlockBitmap1"
                app:layout_constraintWidth_percent="0.3333"
                app:srcCompat="?android:attr/listChoiceIndicatorMultiple" />

            <ImageView
                android:id="@+id/ProfileBlockBitmap5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"

                android:scaleType="fitXY"
                app:layout_constraintStart_toEndOf="@+id/ProfileBlockBitmap4"
                app:layout_constraintTop_toBottomOf="@+id/ProfileBlockBitmap2"
                app:layout_constraintWidth_percent="0.3333"
                app:srcCompat="?android:attr/listChoiceIndicatorMultiple" />

            <ImageView
                android:id="@+id/ProfileBlockBitmap6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"

                android:scaleType="fitXY"
                app:layout_constraintStart_toEndOf="@+id/ProfileBlockBitmap5"

                app:layout_constraintTop_toBottomOf="@+id/ProfileBlockBitmap3"
                app:layout_constraintWidth_percent="0.3333"
                app:srcCompat="?android:attr/listChoiceIndicatorMultiple" />

            <TextView
                android:id="@+id/PaletteProfileSaved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:text="@string/palettes_saved"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProfileBlockBitmap6"
                tools:text="1" />

            <TextView
                android:id="@+id/ProfilePaletteName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/palettes_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/ProfilePaletteSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ProfileBlockBitmap4"
                tools:text="Block Palette" />

            <ImageButton
                android:id="@+id/ProfilePaletteSave"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/palettes_save"
                app:layout_constraintEnd_toStartOf="@+id/PaletteProfileSaved"
                app:layout_constraintTop_toBottomOf="@+id/ProfileBlockBitmap6"
                app:srcCompat="@drawable/ic_favorite_red" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>